--- a/TrashCollection/Views/Customer/CustomerIndex.cshtml
+++ b/TrashCollection/Views/Customer/CustomerIndex.cshtml
@@ -9,6 +9,11 @@
 <div>
     <h4>Customer</h4>
     <hr />
+    <p>
+        @Html.ActionLink("Edit", "EditPickUpDates", new { id = Model.Id }) |
+      
+    </p>
+
     <dl class="dl-horizontal">
         <dt>
             @Html.DisplayNameFor(model => model.FirstName)
@@ -105,18 +110,12 @@
         <dd>
             @Html.DisplayFor(model => model.SpecialPickUp)
         </dd>
+        <p>
+            @Html.ActionLink("To your profile", "CustomerIndex") |
 
-        <dt>
-            @Html.DisplayNameFor(model => model.ApplicationId)
-        </dt>
+        </p>
 
-        <dd>
-            @Html.DisplayFor(model => model.ApplicationId)
-        </dd>
+
 
     </dl>
 </div>
-<p>
-    @Html.ActionLink("Edit", "Edit", new { id = Model.Id }) |
-    @Html.ActionLink("Back to List", "Index")
-</p>
