--- a/TrashCollection/Views/Customer/EditPickupDates.cshtml
+++ b/TrashCollection/Views/Customer/EditPickupDates.cshtml
@@ -1,10 +1,10 @@
 ﻿@model TrashCollection.Models.Customer
 
 @{
-    ViewBag.Title = "EditCustomer";
+    ViewBag.Title = "EditPickupDates";
 }
 
-<h2>EditCustomer</h2>
+<h2>EditPickupDates</h2>
 
 
 @using (Html.BeginForm())
@@ -18,14 +18,14 @@
         @Html.HiddenFor(model => model.Id)
 
        
-       
 
-        
-
-       
-
-
-
+        <div class="form-group">
+            @Html.LabelFor(model => model.WeeklyPickupDay, htmlAttributes: new { @class = "control-label col-md-2" })
+            <div class="col-md-10">
+                @Html.EditorFor(model => model.WeeklyPickupDay, new { htmlAttributes = new { @class = "form-control" } })
+                @Html.ValidationMessageFor(model => model.WeeklyPickupDay, "", new { @class = "text-danger" })
+            </div>
+        </div>
 
         <div class="form-group">
             @Html.LabelFor(model => model.StartDateForNoPickup, htmlAttributes: new { @class = "control-label col-md-2" })
@@ -51,13 +51,6 @@
             </div>
         </div>
 
-        <div class="form-group">
-            @Html.LabelFor(model => model.ApplicationId, htmlAttributes: new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
-                @Html.EditorFor(model => model.ApplicationId, new { htmlAttributes = new { @class = "form-control" } })
-                @Html.ValidationMessageFor(model => model.ApplicationId, "", new { @class = "text-danger" })
-            </div>
-        </div>
 
         <div class="form-group">
             <div class="col-md-offset-2 col-md-10">
@@ -68,7 +61,7 @@
 }
 
 <div>
-    @Html.ActionLink("Back to Your Profile", "CustomerIndex","CustomerController")
+    @Html.ActionLink("To Your profile", "CustomerIndex")
 </div>
 
 @section Scripts {
