--- a/TrashCollection/Views/Customer/CustomerIndex.cshtml
+++ b/TrashCollection/Views/Customer/CustomerIndex.cshtml
@@ -10,7 +10,7 @@
     <h4>Customer</h4>
     <hr />
     <p>
-        @Html.ActionLink("Edit", "EditPickUpDates", new { id = Model.Id }) |
+        @Html.ActionLink("Add dates for specal services", "EditPickUpDates", new { id = Model.Id }) | @Html.ActionLink("view dates for special Pickup","ViewSpecialPickupDate")
       
     </p>
 
@@ -20,7 +20,7 @@
         </dt>
 
         <dd>
-            @Html.DisplayFor(model => model.FirstName)
+            @Html.DisplayFor(model => model.FirstName) 
         </dd>
 
         <dt>
@@ -87,29 +87,6 @@
             @Html.DisplayFor(model => model.PickupConfirmation)
         </dd>
 
-        <dt>
-            @Html.DisplayNameFor(model => model.StartDateForNoPickup)
-        </dt>
-
-        <dd>
-            @Html.DisplayFor(model => model.StartDateForNoPickup)
-        </dd>
-
-        <dt>
-            @Html.DisplayNameFor(model => model.EndDateForNoPickup)
-        </dt>
-
-        <dd>
-            @Html.DisplayFor(model => model.EndDateForNoPickup)
-        </dd>
-
-        <dt>
-            @Html.DisplayNameFor(model => model.SpecialPickUp)
-        </dt>
-
-        <dd>
-            @Html.DisplayFor(model => model.SpecialPickUp)
-        </dd>
         <p>
             @Html.ActionLink("To your profile", "CustomerIndex") |
 
