--- a/TrashCollection/Views/Employee/EmployeeIndex.cshtml
+++ b/TrashCollection/Views/Employee/EmployeeIndex.cshtml
@@ -1,4 +1,4 @@
-﻿@model TrashCollection.Models.Customer
+﻿@model  IEnumerable<TrashCollection.Models.Customer>
 
 @{
     ViewBag.Title = "EmployeeIndex";
@@ -7,28 +7,31 @@
 <h2>EmployeeIndex</h2>
 
 <div>
+
     <h4>Employee</h4>
     <hr />
     <dl class="dl-horizontal">
-        <dt>
-            @Html.DisplayNameFor(model => model.ZipCode)
-        </dt>
+        @foreach (var item in Model)
+        {
+            <dt>
 
-        <dd>
-            @Html.DisplayFor(model => model.ZipCode)
-        </dd>
+                @Html.DisplayNameFor(model => model.FirstName)
+            </dt>
 
-        <dt>
-            @Html.DisplayNameFor(model => model.ApplicationId)
-        </dt>
+            <dd>
+                @Html.DisplayFor(model => item.FirstName)
+            </dd>
 
-        <dd>
-            @Html.DisplayFor(model => model.ApplicationId)
-        </dd>
+            <dt>
+                @Html.DisplayNameFor(model => model.LastName)
+            </dt>
 
-    </dl>
+            <dd>
+                @Html.DisplayFor(model => item.LastName)
+            </dd>
+        }
+        </dl>
 </div>
-<p>
-    @Html.ActionLink("Edit", "Edit", new { id = Model.Id }) |
-    @Html.ActionLink("Back to List", "Index")
-</p>
+
+
+       
